Add a full_title helper

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,19 +52,25 @@
         clear: both;
       }
 
-      #header, #about, #getting-started {
+      #header, #about {
+        padding-left: 170px;
+        padding-right: 30px;
+      }
+
+	#getting-started {
         padding-left: 75px;
         padding-right: 30px;
       }
 
 
       #header {
-        background-image: url("assets/rails.png");
+        background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaAGGqZ2g-U6z9FFA8ss6ghdzFL3aJ3-8PPF0YuD5rRJjX0gZ9gQ");
         background-repeat: no-repeat;
         background-position: top left;
-        height: 64px;
+        height: 150px;
+		
       }
-      #header h1, #header h2 {margin: 0}
+      #header h1, #header h2 {margin: 10}
       #header h2 {
         color: #888;
         font-weight: normal;
