--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,10 @@
-    <h1>Find Your Click</h1>
+	<div class="center hero-unit">   
+ <h1>Find Your Click</h1>
     <p>
       This is the home page for Find Your Click!
     </p>
 
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
 
-
+<center><%= link_to image_tag("FYC_Logo.jpg", alt: "Rails"), 'http://google.com/' %></center>
