Cleaned up rspec

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'About Us') %>
-    <h1>Find Your Click</h1>
+    <h1>About</h1>
     <p>
       This is the about page for Find Your Click!</p>
     <br>
