--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
       This is the home page for Find Your Click!
     </p>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <center><%= link_to image_tag("FYC_Logo.jpg", alt: "Rails"), 'http://google.com/' %></center>
