--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New user</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
+<p>This is where you will eventually be able to sign up</p>
+<br><br>
+<p>Find me in app/views/users/new.html.erb</p>
